Fix text alignment for RTL messages

--- a/Signal/stylesheets/manifest.css
+++ b/Signal/stylesheets/manifest.css
@@ -3225,6 +3225,7 @@ body.dark-theme {
   color: #070c14;
   font-size: 14px;
   line-height: 18px;
+  text-align: start;
   overflow-wrap: break-word;
   word-wrap: break-word;
   word-break: break-word;
